# RL_PARADIGMS

./: .gitignore  README.md  eval_agent.py  get_started.sh  main.py  pyproject.toml  requirements.txt
PongTournamentTest/: play.py  requirements.txt  utils.py  wrappers.py
PongTournamentTest/G00/: load_agents.py  model.py
PongTournamentTest/logs/: M1-G00_G00.txt  M2-G00_G00.txt  M20-G00_G00.txt  M80-G00_G00.txt
configs/: dqn_config.toml  sb3_config.toml
docs/: plot_reward.gp  step1.md  train_data_n_step.txt
docs/data/: train_data_basic.txt  train_data_double.txt  train_data_dueling.txt
miguel/pacman/: config.py  evaluation.py  optuna_best_params.txt  positions.py  requirements.txt  responses.md  run_PPO_cpu.sh  run_PPO_cpu.sh_pmlai09_97614.err  run_PPO_cpu.sh_pmlai09_97614.out  run_pacman.sh  run_pacman.sh_pmlai09_97435.err  run_pacman.sh_pmlai09_97435.out  run_pacman.sh_pmlai09_97787.err  run_pacman.sh_pmlai09_97787.out  train.py  video.py  wrappers.py
models/: conv_dqn.py
src/: agent.py  experience.py  marl_sb3_pong.py  sb3_pong.py  tournament_sb3_pong.py  train_left.py
src/wandb/: latest-run
utils/: utils.py
wandb/: latest-run
wandb/run-20251129_161000-80gwhufc/: run-80gwhufc.wandb
wandb/run-20251129_161247-qynzwkyo/: run-qynzwkyo.wandb
wandb/run-20251129_163809-ztbzlwrd/: run-ztbzlwrd.wandb
wandb/run-20251129_164012-rx4609og/: run-rx4609og.wandb
wandb/run-20251129_165902-dsk58tx0/: run-dsk58tx0.wandb
wandb/run-20251129_175740-qf9ioc9r/: run-qf9ioc9r.wandb
wandb/run-20251129_175807-e2we49o8/: run-e2we49o8.wandb
(+222 files in other folders)
