[project]
name = "rl-paradigms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[accept-rom-license,atari]>=1.2.2",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
]
